tests/compile_fail/escape_guard.stderr
error[E0597]: `guard` does not live long enough
  --> tests/compile_fail/escape_guard.rs:10:21
   |
9  |         let mut guard = bump.scope_guard();
   |             --------- binding `guard` declared here
10 |         let scope = guard.scope();
   |                     ^^^^^ borrowed value does not live long enough
...
13 |     }
   |     - `guard` dropped here while still borrowed
14 |
15 |     dbg!(escapee);
   |          ------- borrow later used here
